testsuite/tests/plugins/test-defaulting-plugin.stderr
test-defaulting-plugin.hs:28:11: warning: [GHC-18042] [-Wtype-defaults (in -Wall)]
    • Defaulting the type variable ‘a0’ to type ‘0’ in the following constraint
        KnownNat a0 arising from a use of ‘q’
    • In the first argument of ‘(+)’, namely ‘q’
      In the second argument of ‘($)’, namely ‘q + w’
      In the expression: print $ q + w

test-defaulting-plugin.hs:28:15: warning: [GHC-18042] [-Wtype-defaults (in -Wall)]
    • Defaulting the type variable ‘a0’ to type ‘2’ in the following constraints
        (KnownNat a0)
          arising from a use of ‘w’ at test-defaulting-plugin.hs:28:15
        (GHC.Internal.TypeError.Assert
           (GHC.Internal.Data.Type.Ord.OrdCond (CmpNat 2 a0) True True False)
           (TypeError ...))
          arising from a use of ‘w’ at test-defaulting-plugin.hs:28:15
    • In the second argument of ‘(+)’, namely ‘w’
      In the second argument of ‘($)’, namely ‘q + w’
      In the expression: print $ q + w

test-defaulting-plugin.hs:29:11: warning: [GHC-18042] [-Wtype-defaults (in -Wall)]
    • Defaulting the type variable ‘b0’ to type ‘0’ in the following constraint
        KnownNat b0 arising from a use of ‘mc’
    • In the second argument of ‘($)’, namely ‘mc Proxy Proxy’
      In a stmt of a 'do' block: print $ mc Proxy Proxy
      In the expression:
        do print $ q + w
           print $ mc Proxy Proxy

test-defaulting-plugin.hs:29:11: warning: [GHC-18042] [-Wtype-defaults (in -Wall)]
    • Defaulting the type variable ‘a0’ to type ‘0’ in the following constraint
        KnownNat a0 arising from a use of ‘mc’
    • In the second argument of ‘($)’, namely ‘mc Proxy Proxy’
      In a stmt of a 'do' block: print $ mc Proxy Proxy
      In the expression:
        do print $ q + w
           print $ mc Proxy Proxy

